--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Benson Duong # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  2023 Data Science major at UC San Diego
   <br><br>
-  Second description 
+  Interests in Data Analysis, Statistics, Machine Learning, Business Analysis.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
