--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Benson Duong # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/avanir_pfp.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   2023 Data Science major at UC San Diego
   <br><br>
