--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Interests in Data Analysis, Statistics, Machine Learning, Business Analysis.
   <br><br>
-  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
+  <a href="https://www.github.com/benduong2001/">View My Github</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
