--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/avanir_pfp.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   2023 Data Science major at UC San Diego
   <br><br>
-  Interests in Data Analysis, Statistics, Computer Science, Machine Learning, Business Analysis.
+  Interests in Data Analysis, Computer Science, Machine Learning, Business Analysis.
   <br><br>
   <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
   <br><br>
