--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,9 @@ logo: "/images/avanir_pfp.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   2023 Data Science major at UC San Diego
   <br><br>
-  Interests in Data Analysis, Computer Science, Machine Learning, Business Analysis.
+  Interests in Data Analysis, Computer Science, Machine Learning.
   <br><br>
   <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
-  <br><br>
-  <a href="https://www.github.com/benduong2001/">View My Github</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
