--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   Interests in Data Analysis, Computer Science, Machine Learning.
   <br><br>
   <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
- 
+ <br><br>
+  <a href="https://benduong2001.github.io/BensonDuongLtxResumeV13.pdf">View My Resume</a>
+   <br><br>
+   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
