--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Interests in Data Analysis, Computer Science, Machine Learning.
   <br><br>
-  <div>
-  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
-  </div>
-  <div>
-  <a href="https://benduong2001.github.io/BensonDuongLtxResumeV13.pdf">View My Resume</a>
-  </div>
+  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">LinkedIn</a>
+  <a href="https://benduong2001.github.io/BensonDuongLtxResumeV13.pdf">Resume</a>
  <br><br>
    
 theme: jekyll-theme-minimal
