--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Interests in Data Analysis, Computer Science, Machine Learning.
   <br><br>
-  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">LinkedIn</a>
+  <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
  <br><br>
    
 theme: jekyll-theme-minimal
