--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.linkedin.com/in/benson-duong-36552a180/">View My LinkedIn Profile</a>
    
 theme: jekyll-theme-minimal
-google_analytics: G-B2Z2TLJ2SE # your Google Analytics tracking ID here
+google_analytics: G-0TSRK7P655 # your Google Analytics tracking ID here
